traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur){
  ^Snake:40: error: '=' expected but '.' found.
def change.OUEST(){
          ^Snake:46: error: illegal start of simple expression
}
^