traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  while(!positionFinale){
    if(estFaceMur && getDirection==Direction.EST){
      changeEST()
    } else if(estFaceMur && getDirection==Direction.OUEST){
      change.OUEST
    } else {avance}
    
  }
}


def positionFinale():Boolean{
  
  
  if(estFaceMur){
    var dir = getDirection()
    while(getDirection()!=Direction.NORD){
      gauche()
    }if(estFaceMur){
      
      return true
    } else {
      while (getDirection()!=dir){
        gauche()
      }
      return false
    }
    }  else {return false}
 
}

def changeEST(){
  gauche()
  avance()
  gauche()
}

def change.OUEST(){
  droite()
  avance()
  droite()
}